// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader renders 1`] = `
<div
  className="sc-eiNpmX cyCloi"
>
  <div
    className="sc-fWrwsF bJenBW"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;

exports[`Loader renders with different colours 1`] = `
<div
  className="sc-eiNpmX cyCloi"
>
  <div
    className="sc-fWrwsF bJenBW"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-fWrwsF eDejBW"
    color="dodoria.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-fWrwsF gXWXPy"
    color="trunks.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-fWrwsF hApnha"
    color="raditz.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;

exports[`Loader renders with sizes 1`] = `
<div
  className="sc-eiNpmX cyCloi"
>
  <div
    className="sc-fWrwsF cdhqTj"
    size="twoxsmall"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-fWrwsF yFhCT"
    size="xsmall"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-fWrwsF fJwfOD"
    size="small"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-fWrwsF bJenBW"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-fWrwsF zpmRa"
    size="large"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;
